# PestManKill

./: .clang-tidy  .clangd  .clangd.linux  .gitignore  CMakeLists.txt  README.md  clangd-msvc-cross-file.yaml  imgui.ini
.github/: copilot-instructions.md
cmake/: embed_resource.cmake
docs/: 2025-12-17_项目总结.md  Chat_System_Usage.md  Disconnect_Reconnect_Guide.md  ECS_UI_Architecture.md  ECS_UI_Usage_Example.md  GameClient_Usage.md  (+17 more)
src/client/: CMakeLists.txt  GameClient.h  SceneImpl.cpp  SceneManager.h  main.cpp  main_ecs_ui_test.cpp  main_test.cpp
src/client/Interface/: ICharactor.h  ISystem.h  IUdpTransport.h
src/client/View/: Mainwindow.h  menu.h
src/client/components/: UIComponents.h  UIDefine.h  UITags.h
src/client/controller/: Controller.h
src/client/events/: SendMessageToChatResponded.h  TargetSelectionEvents.h  UIEvents.h  WidgetChecked.h  buttonClicked.h
src/client/model/: UIFactory.h  UIHelper.h  UISystem.h
src/client/net/: GameClient.h  IServerMessageHandler.h  IServerResponseHandler.h  NetWorkClient.h  NetWorkManager.h  PacketCreator.h  PacketCreatorExample.cpp  ServerResponseHandler.h
src/client/systems/: InputSystem.h  TargetSelectionSystem.h  UIAnimationSystem.h  UIRenderSystem.h
src/client/ui/: Animation.h  Application.h  Arrow.h  Button.h  Dialog.h  ECSApplication.h  Image.h  Label.h  Layout.h  ListArea.h  Tabel.h  TextEdit.h  Widget.h
src/client/utils/: Dispatcher.h  Logger.h  stb_impl.cpp
src/client/view/: Animation.h  Application.h  Arrow.h  Button.h  CharacterView.h  CharacterViewECS.h  DeckView.h  DeckViewECS.h  Dialog.h  EquipmentArea.h  EquipmentAreaECS.h  HandCardView.h  HandCardViewECS.h  Image.cpp  Image.h  Label.h  Layout.h  ListArea.h  MainMenu.h  MainMenuECS.h  MainPlayerView.h  MainWindow.h  MainWindowECS.h  NetRoomWidget.h  OperationArea.h  OperationAreaECS.h  OtherPlayerView.h  OtherPlayerViewECS.h  ProcessingArea.h  ProcessingAreaECS.h  Spacer.h  Widget.h
src/net/: CMakeLists.txt
src/net/App/: Client.cpp  Client.h  KcpEndpoint.h  PeekConv.h  Server.cpp  Server.h
src/net/Session/: KcpSession.cpp  KcpSession.h
src/net/common/: NetAddress.cpp  NetAddress.h
src/net/protocol/: FrameCodec.h  FrameHeader.h
src/net/transport/: AsioUdpTransport.cpp  AsioUdpTransport.h  IUdpTransport.h
src/server/: CMakeLists.txt  GameServer_Example.h  main.cpp
src/server/Interface/: ISkill.h  ISystem.h
src/server/components/: Card.h  Character.h  GameData.h  Player.h  Skill.h  TurnQueue.h
src/server/context/: CreateLogger.h
src/server/events/: DeckEvents.h  Events.h  GameFlowEvents.h  NetWorkEvents.h
src/server/net/: ClientSessionManager.h  ClientSessionManager_Usage.md  NetWorkManager.h
src/server/systems/: DamageSystem.h  DeckSystem.h  GameFlowSystem.h  MessageDispatchSystem.h  NetworkMessageSystem.h  NetworkReceiveSystem.h  NetworkSendSystem.h  SkillSystem.h  SystemManager.h  TurnSystem.h  UseCardSystem.h  ViewSystem.h  systems.h
src/shared/: CMakeLists.txt
src/shared/common/: CommandID.h  Common.h  PacketStream.h
src/shared/messages/: DiscardCardMessage.h  FrameHeader.h  MessageBase.h  MessageDispatcher.h  Messages.h  PacketHeader.h  UseCardMessage.h
src/shared/messages/request/: ConnectedRequest.h  CreateRoomRequest.h  DiscardCardRequest.h  SendMessageRequest.h  SendMessageToChatRequest.h  SettlementRequest.h  UseCardRequest.h
src/shared/messages/response/: CreateRoomResponse.h  DiscardCardResponse.h  SendMessageToChatResponse.h  SettlementResponse.h  UseCardResponse.h
src/shared/utils/: CircularQueue.h  RoundRobin.h
src/ui/: CMakeLists.txt
src/ui/api/: Animation.cpp  Animation.hpp  Factory.cpp  Factory.hpp  Hierarchy.cpp  Hierarchy.hpp  Icon.cpp  Icon.hpp  Layout.cpp  Layout.hpp  Log.h  Size.cpp  Size.hpp  Text.cpp  Text.hpp  Utils.cpp  Utils.hpp  Visibility.cpp  Visibility.hpp
src/ui/assets/shader/: common.hlsl  compile.bat  frag.dxil  frag.hlsl  frag.spv  vert.dxil  vert.hlsl  vert.spv
src/ui/assets/sharder/: base.hlsl
src/ui/common/: Components.h  Components.hpp  Events.h  Events.hpp  GPUWrappers.hpp  GlobalContext.hpp  Policies.h  Policies.hpp  RenderTypes.hpp  Tags.h  Tags.hpp  Types.h
src/ui/components/: Components.h  Define.h  Events.h  Policies.h  Tags.h  UIComponents.h  UIDefine.h  UITags.h
src/ui/core/: Action.h  Application.cpp  Application.h  Application.hpp  Batcher.hpp  EventLoop.h  EventLoop.hpp  Factory.h  GraphicsContext.h  IRenderer.hpp  IconRenderer.hpp  ImguiContext.h  RenderContext.hpp  ScrollBarRenderer.hpp  ShapeRenderer.hpp  SystemManager.cpp  SystemManager.h  SystemManager.hpp  Task.h  TaskChain.cpp  TaskChain.h  TaskChain.hpp  TextRenderer.hpp  TextUtils.hpp  helper.h
src/ui/docs/: ui-components-status.md  ui-next-steps.md
src/ui/examples/: SimpleUIExample.h
src/ui/interface/: IRenderer.hpp  Isystem.h  Isystem.hpp
src/ui/managers/: BatchManager.hpp  CommandBuffer.hpp  DeviceManager.hpp  FontManager.hpp  IconManager.cpp  IconManager.hpp  PipelineCache.hpp  TextTextureCache.hpp
src/ui/renderers/: IconRenderer.hpp  ScrollBarRenderer.hpp  ShapeRenderer.hpp  TextRenderer.hpp
src/ui/singleton/: Dispatcher.hpp  Registry.hpp
src/ui/systems/: ActionSystem.h  ActionSystem.hpp  AnimationSystem.h  FontManager.hpp  HitTestSystem.hpp  InteractionSystem.h  InteractionSystem.hpp  LayoutSystem.h  LayoutSystem.hpp  RenderSystem.cpp  RenderSystem.h  RenderSystem.hpp  RenderSystem.hpp.old  SdlGpuRenderSystem.h  StateSystem.hpp  TimerSystem.cpp  TimerSystem.hpp  TweenSystem.hpp  UILayoutSystem.h  UIRenderSystem.h  WidgetSystem.h  WidgetSystem.hpp  WindowsSystem.h
src/ui/traits/: ComponentsTraits.hpp  EventTraits.hpp  PoliciesTraits.hpp
src/ui/ui/: Application.h  UIFactory.h  UIHelper.h  UISystem.h  ui.hpp
src/utils/: CMakeLists.txt  Dispatcher.h  Functions.h  Logger.h  Registry.h  ThreadPool.h  utils.h
tests/unittest/: CMakeLists.txt
tests/unittest/net/: CMakeLists.txt  MockUdpTransport.h  test_frame_codec.cpp  test_kcp_server.cpp  test_kcp_session.cpp  test_peek_conv.cpp  test_transport.cpp
tests/unittest/ui/: CMakeLists.txt  test_MainWindow.cpp
(+27 files in other folders)
